--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
+    "hardhat": "^2.22.19",
+    "hardhat-coverage": "^0.9.19"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0"
