--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "ethers": "^6.13.5",
     "next": "^15.2.3",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,7 +25,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
