--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "hardhat-coverage": "^0.9.19"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0"
+    "@openzeppelin/contracts": "^5.2.0",
+    "dotenv": "^16.4.7"
   }
 }
